feat: optimize Dockerfile by restructuring npm install process and adding package-lock.json

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,4 +1,4 @@
-
+#optimazed way
 FROM node:18-alpine
 #STARING BASE IMAGE THAT PROJECT WILL BUILD UPON 
 
@@ -6,6 +6,13 @@ WORKDIR /app
 #SETTING WORKING DIRECTORY INSIDE THE CONTAINER
 # SOURCE KI DIRECTORY ME COPY HOGA MATLAB 
 # DIRECTORY MALTAB ./APP exts
+COPY ./package.json ./package.json
+#COPYING PACKAGE.JSON FILE TO DOCKER CONTAINER
+COPY ./package-lock.json ./package-lock.json
+#COPYING PACKAGE-LOCK.JSON FILE TO DOCKER CONTAINER
+RUN npm install
+#INSTALLING DEPENDENCIES IN DOCKER CONTAINER
+
 
 COPY . .
 # FIRST . IS REPREST  EVERYTING IN THIS FOLDER 
@@ -13,7 +20,6 @@ COPY . .
 #MATLAB FIST DOT BOLTA SARI FILE KO DURSRA . BOLTE MERE ME COPY KAR DE 
 # COPY ./index.js ./index.js jo kya index.js file wo copy kar dega app folder ke andar  ese liken best hae 
 
-RUN npm install
 
 EXPOSE 3000
 # THAT TELL TO DOCKER THAT THIS CONTAINER WILL LISTEN ON PORT 3000
@@ -30,3 +36,39 @@ CMD ["node","index.js"]
 # TO RUN THE CONTAINER IN DETACHED MODE
 # DOCKER RUN -D -P <IMAGE_NAME>
 # -D FLAG RUN THE CONTAINER IN DETACHED MODE
+
+
+
+#non optimazed way
+# FROM node:18-alpine
+# #STARING BASE IMAGE THAT PROJECT WILL BUILD UPON 
+
+# WORKDIR /app
+# #SETTING WORKING DIRECTORY INSIDE THE CONTAINER
+# # SOURCE KI DIRECTORY ME COPY HOGA MATLAB 
+# # DIRECTORY MALTAB ./APP exts
+
+
+# COPY . .
+# # FIRST . IS REPREST  EVERYTING IN THIS FOLDER 
+# # SECOND . IS OVER TO DOCKER CONTAINER
+# #MATLAB FIST DOT BOLTA SARI FILE KO DURSRA . BOLTE MERE ME COPY KAR DE 
+# # COPY ./index.js ./index.js jo kya index.js file wo copy kar dega app folder ke andar  ese liken best hae 
+
+# RUN npm install
+
+# EXPOSE 3000
+# # THAT TELL TO DOCKER THAT THIS CONTAINER WILL LISTEN ON PORT 3000
+# # ES PORT KO EXPOSE KARO
+
+# CMD ["node","index.js"]
+# #CMD REPRESETNT JAB CONTAINER START HOGA TAB KYA COMMAND RUN KARNA HAI
+
+# # APNE CMD KONSE CMD KO BUILD IMAGE 
+# # DOCKER BUILD -T <IMAGE_NAME> .
+# # TO RUN THE CONTAINER
+# # DOCKER RUN -P <IMAGE_NAME>
+# # -P FLAG AUTOMATICALLY MAP THE PORTS
+# # TO RUN THE CONTAINER IN DETACHED MODE
+# # DOCKER RUN -D -P <IMAGE_NAME>
+# # -D FLAG RUN THE CONTAINER IN DETACHED MODE
